--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "flowbite": "^1.6.3",
-    "next": "12.3.1",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
+    "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0"
